# structuralvar

./: .gitignore  LICENSE  pyproject.toml
src/kkmacro.egg-info/: PKG-INFO  SOURCES.txt
src/sructuralvar/: __init__.py
src/structuralvar/: cleaning.py  plotting.py  svar.py
src/structuralvar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
